<resources>
    <string name="app_name">MySTECH</string>
    <string name="name_sriwattanas">Sriwattana</string>
    <string name="users">User :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="address">Address :</string>
    <string name="user">User :</string>
</resources>
