<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stech.sukprung.sanae.mystech.RegisterActivity">




    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/margins2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorBeRegis"
            android:layout_marginRight="@dimen/margins2"
            android:layout_marginLeft="@dimen/margins2"
            android:layout_marginTop="@dimen/margins1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/ic_userregis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:id="@+id/edtName"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout

            android:layout_marginRight="@dimen/margins2"
            android:layout_marginLeft="@dimen/margins2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_lname" />

            <EditText
                android:inputType="text"
                android:id="@+id/edtSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorBeRegis"
            android:layout_marginRight="@dimen/margins2"
            android:layout_marginLeft="@dimen/margins2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_address" />

            <EditText
                android:gravity="top"
                android:lines="4"
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="@dimen/margins2"
            android:layout_marginLeft="@dimen/margins2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_userred" />

            <EditText
                android:inputType="text"
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user" />

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorBeRegis"
            android:layout_marginRight="@dimen/margins2"
            android:layout_marginLeft="@dimen/margins2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_key2" />

            <EditText
                android:inputType="text"
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </LinearLayout>

    </LinearLayout>




    <Button
        android:id="@+id/btnRegister"
        android:text="Register"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</RelativeLayout>
